# roadmap_to_dir

./: .gitignore  README.md  flake.nix  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: main.yml
app/: downloader.py  main.py  serializers.py  strhelpers.py  string_processors.py
app/tests/: conftest.py  test_downloader.py  test_main.py  test_string_processors.py
app/tests/cassettes/: test_directory_structure.yaml  test_download_roadmap_json.yaml  test_download_roadmap_page.yaml  test_extract_topic_and_subtopics.yaml  test_get_roadmap[devops].yaml  test_get_roadmap[docker].yaml  test_get_roadmap[python].yaml  test_handle.yaml  test_handle[ai-engineer].yaml  test_handle[devops].yaml  test_handle[docker].yaml  test_handle[python].yaml
app/tests/snapshots/: downloader__directory_structure__0.json  downloader__download_roadmap_json__0.json  downloader__extract_topic_and_subtopics__0.json  main__directory_structure__0.json  main__directory_structure__0.txt  main__download_roadmap_page__0.txt  main__get_roadmap_devops__devops.json  main__get_roadmap_docker__docker.json  main__get_roadmap_python__python.json  main__handle__0.json  main__handle_devops__devops.txt  main__handle_docker__docker.txt  main__handle_python__python.txt
output/: terraform.json
